--- a/PeterworksDevTool/Layout/MainLayout.razor.css
+++ b/PeterworksDevTool/Layout/MainLayout.razor.css
@@ -48,7 +48,7 @@ main {
 
 @media (min-width: 641px) {
     .page {
-        flex-direction: row;
+        flex-direction: column;
     }
 
     .sidebar {
