--- a/PeterworksDevTool/Pages/Http_encode_decode.razor
+++ b/PeterworksDevTool/Pages/Http_encode_decode.razor
@@ -2,8 +2,8 @@
 
 <PageTitle>Http Encode / Decode </PageTitle>
 
-<h1>Http Encdoe / Decode</h1>
-<p>Please enter the Value that you wish to Http Encode or Decode</p>
+<h1 class="title">Http Encdoe / Decode</h1>
+<h2 class="subtitle">Please enter the Value that you wish to Http Encode or Decode</h2>
 <br>
 <input @bind-value="inputText"/>
 <br>
