--- a/PeterworksDevTool/Layout/MainLayout.razor
+++ b/PeterworksDevTool/Layout/MainLayout.razor
@@ -1,15 +1,11 @@
 ﻿@inherits LayoutComponentBase
-<div class="page">
-    <div class="sidebar">
+<div>
+    <div>
         <NavMenu />
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
+        <article class="px-4 py-2">
             @Body
         </article>
     </main>
