--- a/PeterworksDevTool/_Imports.razor
+++ b/PeterworksDevTool/_Imports.razor
@@ -6,6 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.Extensions.Configuration;
+@using Microsoft.Extensions.Configuration.AzureAppConfiguration;
 @using Microsoft.JSInterop
 @using PeterworksDevTool
 @using PeterworksDevTool.Layout
