Add Footer and design

--- a/PeterworksDevTool/Layout/MainLayout.razor
+++ b/PeterworksDevTool/Layout/MainLayout.razor
@@ -4,9 +4,12 @@
         <NavMenu />
     </div>
 
-    <main>
-        <article class="px-4 py-2">
+    <main style="min-height: 100vh;">
+        <article class="px-4 py-2 ">
             @Body
         </article>
     </main>
+    <footer class="footer">
+        <Footer/>
+    </footer>
 </div>
