--- a/PeterworksDevTool/Pages/Home.razor
+++ b/PeterworksDevTool/Pages/Home.razor
@@ -3,13 +3,14 @@
 
 
 <PageTitle>Home</PageTitle>
+<div>
+   <h1 class="title">Hello, world!</h1>
 
-<h1 class="title">Hello, world!</h1>
+   Welcome to your new app.
 
-Welcome to your new app.
+   <h1>Hello @Configuration["PeterworksDevToolPass"]!</h1>
 
-<h1>Hello @Configuration["PeterworksDevToolPass"]!</h1>
-
+</div>
 @code{
 
    // string appConfig = new AppConfig().AppConfigInit();
